# portifolio-vivo

./: .gitignore  CLAUDE.md  Makefile  README.md  rubric.md
.github/workflows/: ci.yml
content/: cv.json  now.json  profile.json
content/feed/: .gitkeep  2026-07-09-git-as-database.json  2026-07-10-claude-code-cli-as-llm-provider.json  2026-07-11-living-portfolio-engine.json  2026-07-11-scroll-driven-animations.json  2026-07-14-survey-insights-architecture.json  2026-07-16-pydantic-ai-parser-key-absence-design.json  2026-07-16-surrealdb-overwrite-migration.json  2026-07-21-llm-insights-pipeline-m1.json  2026-07-21-llm-qualitative-extraction-spike.json  2026-07-21-surrealdb-silent-schema-migration-fail.json
content/projects/: critical-pipeline-optimization.json  dbt-multi-outcome-modeling.json  living-portfolio.json  rotas-sp.json
docs/: README.md  architecture.md  content-model.md  deployment.md  mcp-server.md
hooks/: README.md  capture_session.py  drain_queue.py  evaluate_session.py  settings.snippet.json
mcp/: README.md  pyproject.toml  validate_content.py
mcp/portfolio_mcp/: __init__.py  config.py  github.py  server.py  validation.py
mcp/schemas/: bilingual.schema.json  cv.schema.json  feed-entry.schema.json  now.schema.json  profile.schema.json  project.schema.json
mcp/tests/: test_validation.py
site/: astro.config.mjs  package-lock.json  package.json
site/scripts/: gen_og.py
site/src/components/: CV.astro  Feed.astro  Hero.astro  Now.astro  Portfolio.astro  Projects.astro
site/src/layouts/: Base.astro
site/src/lib/: content.ts  dates.ts  (+3 more)
(+5 files in other folders)
