[project]
name = "portfolio-mcp"
version = "0.1.0"
description = "MCP server + content validator for the Living Portfolio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.21",
    "mcp>=1.2",
    "httpx>=0.27",
]

[project.scripts]
portfolio-mcp = "portfolio_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["portfolio_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"schemas" = "portfolio_mcp/schemas"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
